--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Personagens</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">Séries</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contato</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index2.html">Aliens</a></li>
                     </ul>
                 </div>
             </div>
@@ -170,10 +171,10 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/azimuth.jpeg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
+                                <div class="portfolio-caption-heading">Azmuth</div>
                                 <div class="portfolio-caption-subheading text-muted">Clique na imagem e conheça o personagem</div>
                             </div>
                         </div>
@@ -185,10 +186,10 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/sapiens.jpeg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
+                                <div class="portfolio-caption-heading">Sapiens Celestiais</div>
                                 <div class="portfolio-caption-subheading text-muted">Clique na imagem e conheça o personagem</div>
                             </div>
                         </div>
@@ -572,10 +573,15 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
+                                    <h2 class="text-uppercase">Azmuth</h2>
                                     <p class="item-intro text-muted">Informações abaixo</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/azimuth.jpeg" alt="..." />
+                                    <p>Azmuth é o criador do Omnitrix e o ser mais inteligente da galáxia em Ben 10.
+Pertence à espécie Galvan, conhecida por seu enorme intelecto apesar do pequeno tamanho.
+Originalmente arrogante, Azmuth criou o Omnitrix para promover paz entre espécies, não guerra.
+Após ver seu invento sendo usado de forma perigosa, tornou-se mais reservado e cauteloso.
+Ele age como mentor de Ben, guiando-o em momentos críticos e protegendo o Omnitrix.
+Com sua genialidade e responsabilidade, é uma das figuras mais influentes de todo o universo Ben 10.</p>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
                                         Fechar
@@ -597,10 +603,10 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
+                                    <h2 class="text-uppercase">Sapiens Celestiais</h2>
                                     <p class="item-intro text-muted">Informações abaixo</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/sapiens.jpeg" alt="..." />
+                                    <p>Os Sapiens Celestiais são a espécie alienígena conhecida como a mais inteligente de todo o universo de Ben 10. Eles possuem aparência diminuta, com pele branca e olhos grandes, mas sua capacidade mental supera a de qualquer outra raça. Esses seres conseguem compreender, criar e manipular tecnologias extremamente avançadas, muitas vezes impossíveis para outros povos. Entre suas habilidades estão pensamento hiper-lógico, engenharia quântica e domínio absoluto da ciência. O representante mais famoso dessa espécie é Azmuth, o criador do Omnitrix. Apesar de seu tamanho, os Sapiens Celestiais têm enorme influência no equilíbrio cósmico por causa de seu conhecimento.</p>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
                                         Fechar
