--- a/index.html
+++ b/index.html
@@ -439,19 +439,8 @@
 
             <div class="col-lg-4 my-3 my-lg-0">
                 <!-- GitHub -->
-                <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="GitHub">
-                    <i class="fab fa-github"></i>
-                </a>
-
-                <!-- Instagram -->
-                <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Instagram">
-                    <i class="fab fa-instagram"></i>
-                </a>
-
-                <!-- YouTube (pode trocar por outro se quiser) -->
-                <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="YouTube">
-                    <i class="fab fa-youtube"></i>
-                </a>
+                <a class="btn btn-dark btn-social mx-2" 
+                        href="https://github.com/Bernardo751" target="_blank" rel="noopener noreferrer"aria-label="GitHub"><i class="fab fa-github"></i></a>
             </div>
 
             <div class="col-lg-4 text-lg-end">
