--- a/index2.html
+++ b/index2.html
@@ -27,6 +27,7 @@
                         <li class="nav-item"><a class="nav-link" href="index.html#about">Séries</a></li>
                         <li class="nav-item"><a class="nav-link" href="index.html#contact">Contato</a></li>
                         <li class="nav-item"><a class="nav-link" href="index2.html">Aliens</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index3.html">Omnitrix</a></li>
                     </ul>
                 </div>
             </div>
